// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthButton/> when authenticated renders properly 1`] = `
<div>
  <button
    aria-disabled="false"
    aria-label="t(logOut)"
    class="Button__Container-sc-1v65cga-0 cdYeHJ NavLink__Button-sc-1oywt1c-1 dleGjY AuthButton__StyledNavLink-sc-1wpg4pe-0 kftKTL"
    role="button"
    type="button"
  >
    <div
      class="NavLink__Container-sc-1oywt1c-2 cDzvwX"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<AuthButton/> when not authenticated renders properly 1`] = `
<div>
  <button
    aria-disabled="false"
    aria-label="t(logIn)"
    class="Button__Container-sc-1v65cga-0 cdYeHJ NavLink__Button-sc-1oywt1c-1 dleGjY AuthButton__StyledNavLink-sc-1wpg4pe-0 kftKTL"
    role="button"
    type="button"
  >
    <div
      class="NavLink__Container-sc-1oywt1c-2 cDzvwX"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z"
        />
      </svg>
    </div>
  </button>
</div>
`;
